--- a/_posts/2021-01-28-변수-타입-조건문.md
+++ b/_posts/2021-01-28-변수-타입-조건문.md
@@ -9,38 +9,49 @@ render_with_liquid: false
 ---
 
 ## 변수(Variable)
-- Programming = Data Processing
-- 데이터 보관함 = 메모리 (*보관함의 크기는 동일)
-- 각 보관함의 이름 = 변수
-### Achievement Goals
+<details>
+<summary>Achievement Goals</summary>
+<div markdown="1">       
 - [ ]  자바스크립트에서 변수의 선언과 값의 할당에 대해서 설명할 수 있다.
 - [ ]  변수 선언과 값 할당에 사용되는 용어에 대해서 정확하게 알 수 있다.
 - [ ]  `=`가 "같다"라는 의미가 아니라 할당연산자임을 이해할 수 있다.
 - [ ]  `num = num + 1`이 '같다'라는 의미가 아니라 값을 할당하는 것임을 설명할 수 있다.
+</div>
+</details>
 
-*선언 = 메모리 공간을 만들고 / 할당 = 공간에 데이터를 저장*
-- 표현식에서 결과물을 다시 변수로 담을 수도 있다.
-- 변수는 동일한 변수를 이용해 대입할 수 있다.
-  ```jsx
-    let sum; // 선언
-    sum = 2; // 할당
-  ```
+  - ***선언 = 메모리 공간을 만들고 / 할당 = 공간에 데이터를 저장***
+    - Programming = Data Processing
+    - 데이터 보관함 = 메모리 (보관함의 크기는 동일)
+    - 각 보관함의 이름 = 변수
+  - 표현식에서 결과물을 다시 변수로 담을 수도 있다.
+  - 변수는 동일한 변수를 이용해 대입할 수 있다.
+    ```jsx
+     let sum; // 선언
+     sum = 2; // 할당
+    ```
+
 ## 타입(Type)
-### Achievement Goals
+<details>
+<summary>Achievement Goals</summary>
+<div markdown="1">       
 - [ ]  자바스크립트에서 원시 자료형과 참조 자료형이 무엇인지 알 수 있다.
 - [ ]  원시 자료형 string, number, boolean, undefined의 의미를 이해할 수 있다.
 - [ ]  타입마다 다른 속성과 메소드가 있다는 것을 이해할 수 있다.
 - [ ]  typeof 를 활용하여 특정 값의 타입을 확인할 수 있다.
 - [ ]  비교 시 엄밀한 비교의 필요성을 이해할 수 있다.
+</div>
+</details>
 
-- 원시 자료형 - 객체가 아니면서 method를 가지지 않는 6가지의 타입
-  (ex) string, number, boolean, undefined, symbol, bigint, (null)
-  *원시 자료형은 모두 '하나'의 데이터를 담고 있다.
+- 원시 자료형 - 객체가 아니면서 method를 가지지 않는 6가지의 타입  
+  `(ex) string, number, boolean, undefined, symbol, bigint, (null)`
+  * 원시 자료형은 모두 '하나'의 데이터를 담고 있다.
 - 참조 자료형 - 원시 자료형이 아닌 모든 것
-  (ex) 객체, 배열, 함수
+  `(ex) 객체, 배열, 함수`
 
 ## 함수(Function)
-### Achievement Goals
+<details>
+<summary>Achievement Goals</summary>
+<div markdown="1">       
 - [ ]  함수 선언을 위해 필요한 keyword, name, parameter, body에 대해 이해할 수 있다.
 - [ ]  함수 선언과 호출의 기초적인 작동 원리를 이해할 수 있다.
 - [ ]  함수의 결과값이 변수에 할당되어 담기는 과정을 이해할 수 있다.
@@ -48,34 +59,40 @@ render_with_liquid: false
 - [ ]  함수 그 자체와 함수의 호출을 구분하여 사용할 수 있다.
 - [ ]  매개변수(parameter)와 전달인자(argument)를 구분하여 사용할 수 있다.
 - [ ]  같은 기능을 하는 함수를 선언식, 표현식, 화살표 함수로 바꾸어 표현할 수 있다.
+</div>
+</details>
 
 - 함수는 호출 후에 반드시 돌아온다(return) / function과 return은 항상 같이
   1. 함수 선언 
   2. 함수 호출
 
 - 함수 선언 방법 3가지 (*함수 선언식 / 함수 표현식 / 화살표 함수*)
-    *화살표 함수의 경우 함수식이 한줄인 경우에는 중괄호{}와 return 생략가능!
+    * 화살표 함수의 경우 함수식이 한줄인 경우에는 중괄호{}와 return 생략가능!
 
 ## 조건문
-### Achievement goals
+<details>
+<summary>Achievement Goals</summary>
+<div markdown="1">       
 - [ ]  truthy와 falsy가 조건문에서 작동하는 방식을 이해할 수 있다.
 - [ ]  비교연산자를 통한 엄격한 비교에 대해 이해할 수 있다.
 - [ ]  if와 else if, else를 이해하고 무리없이 활용할 수 있다.
 - [ ]  논리연산자를 통해 복잡한 조건을 간결하게 작성할 수 있다.
 - [ ]  복잡한 조건문을 활용하여 실생활에서 마주하는 문제를 해결하는 알고리즘을 구현한다.
+</div>
+</details>
 
 - Boolean 타입에 대한 이해 필요 (*비교의 결과는 늘 true or false = Boolean*)
-  - 조건문은 true false를 판별하는 기준을 세우는 것 (*비교연산자 필요)
-  -*비교연산자* ( > , < , ≥ , ≤ , ===, !==) 
-  -*( == or != )은 타입을 엄격하게 비교하지 않기때문에 사용하면 안된다.* 'JS Comparison Table 참조'
-    -'===' : 값과 타입을 모두 비교
-    -'==' : 값만을 비교
-    -'=' : 할당연산자
+  - 조건문은 true false를 판별하는 기준을 세우는 것 (비교연산자 필요)
+  - *비교연산자* `> , < , ≥ , ≤ , ===, !==` 
+  - *`( == or != )`은 타입을 엄격하게 비교하지 않기때문에 사용하면 안된다.*
+    - `===` : 값과 타입을 모두 비교
+    - `==` : 값만을 비교
+    - `=` : 할당연산자
 
-- if (조건1) - 조건1이 통과할 경우
-- else if(조건2) - 조건1이 통과하지 않을 경우
-- else - 모든 조건이 통과하지 않을 경우
-- 다중 if 문에서는 각각의 if 에 return 값이 필요
+- `if`(조건1) - 조건1이 통과할 경우
+- `else if`(조건2) - 조건1이 통과하지 않을 경우
+- `else` - 모든 조건이 통과하지 않을 경우
+- 다중 if 문에서는 각각의 `if` 에 `return` 값이 필요
 ```jsx
      if(~~) {
       if(~~) {
@@ -100,7 +117,7 @@ render_with_liquid: false
       !'Hello' // false (String 타입은 true로 취급)
       !false = true / !(2>3) = true
 ```
-- 기억해야할 6가지 falsy 값
+- ***기억해야할 6가지 falsy 값***  
   if(false / null / undefined / 0 / NaN / ' ')
-- MECE 기법
+- MECE 기법  
   : 중복되는 항목을 기준으로 조건의 순서를 우선적으로 매기는 것이 중요하다.
