포스트 작성 및 수정

--- a/_posts/2022-01-28-01-28-TIL.md
+++ b/_posts/2022-01-28-01-28-TIL.md
@@ -8,3 +8,151 @@ tags: [TIL]
 render_with_liquid: false
 ---
 
+## *TIL*
+
+- **주로 사용할만한 MarkDown 문법**
+
+  #### ***제목***
+
+    ```
+    # 제목 1
+    ## 제목 2
+    ``` 
+
+    # 제목 1
+    ## 제목 2  
+
+    ---
+
+
+  #### ***설명*** 
+
+    ```
+    Sun
+    : the star around which the earth orbits
+    ```
+
+    Sun
+    : the star around which the earth orbits
+
+    Moon
+    : the natural satellite of the earth, visible by reflected light from the sun
+
+    ---
+
+  #### ***토글 및 체크아웃 박스***
+
+    ```markdown
+    <details>
+    <summary>토글 목록</summary>
+    <div markdown="1">       
+    - [ ]  체크아웃 1
+    - [ ]  체크아웃 2
+    </div>
+    </details>
+    ```
+
+    <details>
+    <summary>토글 목록</summary>
+    <div markdown="1">       
+    - [ ]  체크아웃 1
+    - [ ]  체크아웃 2
+    </div>
+    </details>
+
+    ---
+
+  #### ***텍스트 색상***
+
+    `<span style="color:blue">파란 글씨</span>`  
+
+    <span style="color:blue">파란 글씨</span>
+
+    ---
+
+  #### ***밑줄***
+
+    `<u>밑줄 텍스트</u>`  
+
+    <u>밑줄 텍스트</u>
+
+    ---
+
+  #### ***URL 링크***
+
+    `[설명할 내용](URL 주소)`  
+
+    [Naver](https://naver.com)
+
+    ---
+
+  #### ***그림 링크 삽입***
+
+    `![내용](이미지주소)`  
+
+    ![image](https://cdn.pixabay.com/photo/2021/09/10/20/02/cats-6614088_960_720.jpg)
+
+    - **크기 수정**
+
+    `<img src="이미지 URL" width="가로 사이즈" height="세로 사이즈">`  
+
+    <img src="https://cdn.pixabay.com/photo/2021/09/10/20/02/cats-6614088_960_720.jpg" width=200px height=200px>
+
+    ---
+
+  #### ***인용문***
+
+    ```markdown
+    > 인용문
+    >> 인용문 속의 인용문
+    ```
+
+    > 인용문
+    >> 인용문 속의 인용문
+
+    ---
+
+  #### ***테이블*** 
+
+    왼쪽 정렬 `|:---|`  
+    가운데 정렬 `|:---:|`  
+    오른쪽 정렬 `|---:|`  
+
+    ```markdown
+    |**영화 제목**|**주연 배우**|*장르*|
+    |:---:|---:|---|
+    |명량|최민식|역사|
+    |인터스텔라|매튜 맥커너히|SF|
+    |돈룩업|레오나르도 디카프리오|코미디, SF|
+    ```
+
+    |**영화 제목**|**주연 배우**|*장르*|
+    |:---:|---:|---|
+    |명량|최민식|역사|
+    |인터스텔라|매튜 맥커너히|SF|
+    |돈룩업|레오나르도 디카프리오|코미디, SF|
+
+    ---
+
+  #### ***프롬프트(Prompts)***
+
+    ```markdown
+    > `note` *타입 프롬프트*
+    {: .prompt-note }
+
+    > `warning` *타입 프롬프트*
+    {: .prompt-warning }
+
+    > `danger` *타입 프롬프트*
+    {: .prompt-danger }
+    ```
+
+
+  > `note` *타입 프롬프트*
+  {: .prompt-note }
+
+  > `warning` *타입 프롬프트*
+  {: .prompt-warning }
+
+  > `danger` *타입 프롬프트*
+  {: .prompt-danger }
