오타 및 일부 서식 수정

--- a/_posts/2022-01-28-변수-타입-함수-조건문.md
+++ b/_posts/2022-01-28-변수-타입-함수-조건문.md
@@ -71,7 +71,7 @@ render_with_liquid: false
   2. 함수 호출
 
 - 함수 선언 방법 3가지 (*함수 선언식 / 함수 표현식 / 화살표 함수*)
-    * 화살표 함수의 경우 함수식이 한줄인 경우에는 중괄호{}와 return 생략가능!
+    * 화살표 함수의 경우 함수식이 한줄인 경우에는 중괄호`{}`와 return 생략가능!
 
   ---
 
@@ -89,15 +89,20 @@ render_with_liquid: false
 
 - Boolean 타입에 대한 이해 필요 (*비교의 결과는 늘 true or false = Boolean*)
   - 조건문은 true false를 판별하는 기준을 세우는 것 (비교연산자 필요)
-  - *비교연산자* `> , < , ≥ , ≤ , ===, !==` 
-  - *`( == or != )`은 타입을 엄격하게 비교하지 않기때문에 사용하면 안된다.*
+  - *비교연산자* `> , < , ≥ , ≤ , ===, !==`  
     - `===` : 값과 타입을 모두 비교
     - `==` : 값만을 비교
     - `=` : 할당연산자
 
-- `if`(조건1) - 조건1이 통과할 경우
-- `else if`(조건2) - 조건1이 통과하지 않을 경우
-- `else` - 모든 조건이 통과하지 않을 경우
+  > *`( == or != )`은 타입을 엄격하게 비교하지 않기때문에 사용하면 안됨*
+    {: .prompt-danger }
+
+- `if` (조건1) 
+  : 조건1이 통과할 경우
+- `else if` (조건2) 
+  : 조건1이 통과하지 않을 경우
+- `else`
+  : 모든 조건이 통과하지 않을 경우
 - 다중 if 문에서는 각각의 `if` 에 `return` 값이 필요
 ```jsx
      if(~~) {
@@ -110,7 +115,7 @@ render_with_liquid: false
 
 - 두가지 조건이 한번에 적용되는 경우 논리연산자 사용
 ```jsx
-  &&(and) / ||(or)
+  &&(and), ||(or)
    !isStudent && isFemale; ⇒ 학생이 아니면서, 여성일 때
       true || true // true
       true || false // true
@@ -123,8 +128,9 @@ render_with_liquid: false
       !'Hello' // false (String 타입은 true로 취급)
       !false = true / !(2>3) = true
 ```
-- ***기억해야할 6가지 falsy 값***  
-  if(false / null / undefined / 0 / NaN / ' ')
+- > *기억해야할 6가지 falsy value*
+  {: .prompt-warning }  
+  **`if(false, null, undefined, 0, NaN, ' ')`**  
 
 - MECE 기법  
   : 중복되는 항목을 기준으로 조건의 순서를 우선적으로 매기는 것이 중요하다.
