포스트 추가 및 수정

--- a/_posts/2022-01-24-01-24-TIL.md
+++ b/_posts/2022-01-24-01-24-TIL.md
@@ -46,19 +46,19 @@ http.createServer((request, response) => {
 
 
  * **Session 쿠키**: 웹 브라우저를 종료하면 사라지는 휘발성 쿠키, 기간 옵션 설정하지 않음
- * **Permanent 쿠키**: 웹 브라우저를 꺼도 사라지지 않는 영속성 쿠키, Expires 또는 Max-Age를 설정
+ * **Permanent 쿠키**: 웹 브라우저를 꺼도 사라지지 않는 영속성 쿠키, `Expires` 또는 `Max-Age`를 설정
  * 보안 options
-   * `Secure`: Set-Cookie로 Secure를 설정하면 해당 쿠키는 request Cookie에 저장되지 않음
+   * `Secure`: `Set-Cookie`로 설정하면 해당 쿠키는 request Cookie에 저장되지 않음
    * `HttpOnly`: 쿠키 탈취 방지를 위해 javaScript로는 쿠키에 접근할 수 없게 해주는 옵션
  * 기타 option
    * `Path`: 지정한 path에서만 쿠키 전송
    * `Domain`: 지정한 Domain에서만 쿠키 전송
 
  * 로그인 (쿠키에 로그인 정보를 담는 것은 보안상 매우 위험하므로 전체 흐름만 파악할 것) => Session
-   1. 로그인 실행(버튼 등 UI로 구현)하면 Set-Cookie로 email(id), password 값을 저장
-   2. 로그인 여부를 확인(req.headers.cookie => cookie.parse)
-      parse의 결과에 email, password 정보가 담겨있으면 로그인 상태 변화 isLogin=false => true
+   1. 로그인 실행(버튼 등 UI로 구현)하면 `Set-Cookie`로 email(id), password 값을 저장
+   2. 로그인 여부를 확인(`req.headers.cookie => cookie.parse`)  
+      parse의 결과에 email, password 정보가 담겨있으면 로그인 상태 변화 `isLogin = false => true`
    3. 로그인 상태에 따른 UI 조정
 
  * 로그아웃
-    * Set-Cookie로 email, password에 빈 값을 주고, Max-Age=0으로 설정 => 수명이 0이기에 쿠키가 바로 삭제됨
+    * `Set-Cookie`로 email, password에 빈 값을 주고, `Max-Age=0`으로 설정 => 수명이 0이기에 쿠키가 바로 삭제됨
