--- a/_posts/2022-01-28-문자열.md
+++ b/_posts/2022-01-28-문자열.md
@@ -28,9 +28,9 @@ render_with_liquid: false
 
 ---
 
-- `str[index]` - index로 접근은 가능하나 쓸 수는 없음 (*Read Only*)
+- `str[index]` - index로 접근은 가능하나 쓸 수는 없음 *(Read Only)*
     - 문자열은 새로 값을 할당하지 않는 한, 그 값이 바뀌지 않는다.
-- ‘+' 연산자 쓸 수 있음 ⇒ 다른 타입과 문자열 사이에 '+' 사용하면 string 형식으로 변환
+- ‘+' 연산자 쓸 수 있음  ⇒  다른 타입과 문자열 사이에 '+' 사용하면 string 형식으로 변환
 - `length`: 문자열 길이를 반환
 - Method
     - **`str.indexof( argument )`**
@@ -38,7 +38,7 @@ render_with_liquid: false
         - `return value` : 처음으로 일치하는 문자열 , 없을 시 -1로 표기
     - **`str.includes( argument )`**
         - IE에서는 사용 불가
-        - `Boolean return` / 소대문자 구분必
+        - `Boolean return` / 대소문자 구분 필수
     - **`str.split(seperator)` csv 형식 처리에 유용 (,)**
         - `arguments`: 분리 기준이 될 문자열
         - `return value`: 분리된 문자열이 포함된 '배열'
@@ -52,7 +52,7 @@ render_with_liquid: false
             ```
             
     - ***`str.substring(start, end)`***
-        - `argumen`: 시작 index, 끝 index
+        - `arguments`: 시작 index, 끝 index
         - 음수는 0으로 취급
 - ***string method는 전부 immutable 즉, 원본이 변하지 않음.***
     - **array method에서는 immutable / mutable 구분 잘할 것!**
