--- a/_posts/2022-02-03-02-03-TIL.md
+++ b/_posts/2022-02-03-02-03-TIL.md
@@ -24,6 +24,17 @@ render_with_liquid: false
 |***Cookie***|HTTP의 무상태성을 보완해주는 도구|클라이언트|서버에 부담을 덜어줌|쿠키 그 자체는 인증이 아님|
 |***Session***|접속 상태를 서버가 가짐*(Stateful)* <br> 접속 상태와 권한 부여를 위해 세션 아이디를 쿠키로 전송|서버|신뢰할 수 있는 유저인지 <br> 서버에서 추가로 확인 가능|하나의 서버에서만 접속 상태를 가지므로 <br> 분산에 불리|
 
+- **세션 로그아웃의 중요성**  
+: 세션 아이디가 담긴 쿠키가 유출된 상태에서는 해당 쿠키를 이용한 요청이 유출된 쿠키를 이용한 공격인지,
+  정말로 사용자가 요청을 보낸건지 서버는 확인할 방법이 없다 > ***즉, 서버에서 세션을 파괴하는 과정이 반드시 필요***
+  
+  *로그아웃 방법 2가지*  
+
+  1. 서버 세션 스토어에 있는 세션을 지우고 (`.destroy`)  
+    클라이언트에서 세션 아이디를 없앤다
+  2. 서버 세션 스토어에 있는 세션을 지우고 (`.destroy`)  
+    서버에서 클라이언트가 가진 세션아이디를 빈 문자열, 혹은 랜덤값으로 바꿔버린다
+    
 ---
 
 #### *HTTPS와 SSL 인증서*
