--- a/_posts/2022-02-09-02-09-TIL.md
+++ b/_posts/2022-02-09-02-09-TIL.md
@@ -10,17 +10,36 @@ render_with_liquid: false
 
 ### OAuth 인증
 
-#### 인증 vs 인가
+#### 인증(Authentication) vs 인가(Authorization)
   - 인증 : 사용자가 유효한지 판단 (자격 증명) ex) JWT
   - 인가 : 어떤 권한을 획득할 수 있는지 결정 ex) OAuth
 
-#### Github OAuth
+#### Github OAuth 플로우
 
 > [Github OAuth guide](https://docs.github.com/en/developers/apps/building-oauth-apps/authorizing-oauth-apps)
 
-- Authorization Code를 받아오기 위해 Github에 보내는 요청 *(Request a user's GitHub identity)*
+- OAuth란?  
+    : 보안된 리소스에 액세스하기 위해 클라이언트에게 권한을 제공(Authorization)하는  
+    프로세스를 단순화하는 프로토콜 중 한 방법
+    > 네이버, 카카오, 구글 등 다양한 서비스가 존재하는 데, 현재 제공하려는 서비스에서 이와 같이 다른 서비스의 회원 정보를 
+    > 안전하게 사용하기 위한 방법이라고 볼 수 있다
+
+*스프린트 진행은 Github을 기준으로 작성되었습니다*
+
+- 우선, Github의 `Developer settings`에서 OAuth 서비스를 이용하기 위해 애플리케이션 등록을 해준다
+
+![oauth등록](https://user-images.githubusercontent.com/89354370/153236247-2429907a-d46f-4087-a257-6ce6cfa54ce9.png)
+*Client로 사용할 주소(Homepage) 및 AuthorizationCode를 받은 후 Redirect할 주소(callback) 등의 정보로 등록해준다*
+
+<img src="https://user-images.githubusercontent.com/89354370/153235728-64ba81a5-4305-4ddc-a770-87eda28be8bb.png" width=500px height=400px alt="Client 정보">
+*등록을 마치게 되면 위 그림과 같이 Client ID, Client Secret을 발급받을 수 있다*
+
+
+1. **Authorization Code를 받아오기 위해 Github에 요청한다** *(Request a user's GitHub identity)*
 
     ```jsx
+    // 클라이언트
+
     const axios = require('axios');
 
     // 1. URI에 직접 쿼리를 작성하는 방법 -> Promise 혹은 Async / await 방법으로 요청한 데이터를 확인할 수 있다
@@ -41,26 +60,78 @@ render_with_liquid: false
     })
     ```
 
-    > ***Content-Type 헤더와 Accept 헤더의 차이점***
-    {: .prompt-note }
+    *위 코드처럼 `github.com/login/oauth`에 `client_id`를 넣어 요청하면 AccessToken을 받기 위해 필요한 code 정보를 받아올 수 있다*
 
-    - `Content-Type`  
-        : 123
-    - `Accept`  
-        : 3425
-        
-    ---
+    ![image](https://user-images.githubusercontent.com/89354370/153237470-baceb495-fcd3-4a3d-a75d-a9238f973588.png)
+    *OAuth 등록 시 작성했던 Callback URL로 Redirect되면서 Code를 가져오는 것을 확인할 수 있다*
 
-- Authorization Code를 이용해 AccessToken을 받아오기 위한 요청
-
+    ```jsx
+    const url = new URL(window.location.href)
+    const authorizationCode = url.searchParams.get('code') // URL로부터 code 정보를 가져오자
+    ```
+    
 
     ---
 
-#### OAuth 로직 플로우
+2. 받아온 Authorization Code를 이용해 Github에 AccessToken 발급을 요청한다  
+    : 이때, 요청을 위해 꼭 필요한 파라미터는 `client_id`, `client_secret`, `code` 세 종류이다
+
+    ```jsx
+    // 서버
+
+    axios
+        .post('https://github.com/login/oauth/access_token', {
+            client_id: clientID,
+            client_secret: clientSecret, // 보안이 필요한 정보니 꼭 환경변수로 설정하여 감춰주자
+            code: req.body.authorizationCode
+        }, {
+            headers: {
+                "Accept": "application/json" 
+                // 응답으로 오는 토큰 정보를 좀 더 쉽게 다루기 위해 데이터 타입을 정해주자
+                // "application/vnd.github+json" 옵션을 추천한다고 되어있는 데 추후에 알아보자
+            }
+        })
+    ```
+
+3. 발급받은 토큰을 클라이언트로 전달해주고 이 후 클라이언트는 원하는 정보를 가져오기 위해 리소스 서버에 요청을 보낼 때 토큰을 헤더에 넣어 보내준다  
+
+    > 이 부분은 앞서 토큰 기반 인증에서도 다룬 내용이라 자세한 코드 내용은 생략했습니다
+
+    ---
+
+
+#### ***Content-Type vs Accept***
+
+- `Content-Type`  
+    > 클라이언트에서 서버로 요청을 보낸다 가정했을 때, 요청에 보내주는 데이터 타입을 결정해주는 헤더
+
+        ```jsx
+        axios.post([URL], {
+            name: "SsankQ"
+        }, {
+            "Content-Type": "application/json"
+        })
+        ```
+
+- `Accept`  
+    > 클라이언트에서 서버로 요청을 보내고 그에 대한 응답을 받는 경우, 받을 데이터의 타입을 정해주는 헤더
+
+        ```jsx
+        axios.get([URL], {
+            headers: {
+                "Accept": "application/json"
+            }
+        })
+        ```
+
+---
+
+#### OAuth Flow
+
+![flow](https://user-images.githubusercontent.com/89354370/153241604-0bfcc3bc-24a9-463a-9306-cc5059f16882.png)
+*이미지 출처: 코드스테이츠*
 
 <img src="https://user-images.githubusercontent.com/89354370/153220127-a5b965e2-6897-46bd-81d8-5579db29b3fc.png" width=500px height=400px alt="OAuth flow">
-*오늘도 이해를 위한 낙서(?)를 만들어보았다*
-
 <img src="https://user-images.githubusercontent.com/89354370/153220408-40d0d963-d480-4f7a-9ba1-4e5d0b319136.png" width=700px height=600px alt="token flow">
-*낙서 한장 추가요*
+*이해를 하기 위한 필사적으로 끄적여본 낙서들...*
 
