포스트 내용 추가

--- a/_posts/2022-02-11-02-11-TIL.md
+++ b/_posts/2022-02-11-02-11-TIL.md
@@ -10,7 +10,7 @@ render_with_liquid: false
 
 ### 컴퓨터공학 기본개념 정리
 
-#### 프로그램, 프로세스, 쓰레드
+#### **프로그램, 프로세스**
 > [https://velog.io/@gparkkii/ProgramProcessThread](https://velog.io/@gparkkii/ProgramProcessThread) 참조  
 
   *작업관리자를 켜면 응용프로그램, 프로세스라는 단어를 자주 접해본 적 있을 것이다. 그럼 이 용어들이 뜻하는 바는 무엇일까?*
@@ -18,15 +18,56 @@ render_with_liquid: false
   - 프로그램(Program)  
   : 컴퓨터에서 어떤 작업을 위해 실행할 수 있는 **'정적'**인 상태의 파일을 뜻한다(파일 시스템에 존재하는 실행 파일) 
   - 프로세스(Process)  
-  : 프로그램이 실행되고 있는 상태 즉, **'동적'**인 상태의 컴퓨터 프로그램을 뜻한다
-  - 쓰레드(Thread)  
-  : 프로세스가 할당 받은 자원을 이용하는 실행 단위이자, 프로세스의 특정한 수행 경로이자 프로세스 내에서 실행되는 여러 흐름의 단위
+  : 프로그램이 실행되고 있는 상태. 즉, **'동적'**인 상태의 컴퓨터 프로그램을 뜻한다  
+<span style="color:gray">*즉, 프로그램은 운영체제 위에서 어떠한 작업을 처리하기 위해 존재하는 파일이며, 여기에 메모리 등의 필요한 자원을 할당해서 실행하게 되면 프로세스가 된다*</span>
 
-  *즉, 프로그램은 운영체제 위에서 어떠한 작업을 처리하기 위해 존재하는 파일이며, 여기에 메모리 등의 필요한 자원을 할당해서 실행하게 되면 프로세스가 된다*
-    - 프로세스가 할당받는 자원은 
+<span style="color:#52B69A">하드웨어 → OS → 프로그램 순으로 명령이 전달되면 *정적인 상태의 프로그램이 동적인 상태의 프로세스로 전환된다*<br>그 프로세스 안에 수행되는 코드 하나의 흐름을 쓰레드라 한다. 쓰레드에 대한 내용은 하단에서 더 자세히 다루도록 하자</span>
 
-#### 운영체제    
+  
+  - 프로세스가 할당받는 자원  
+  : CPU 시간, 운영되기 필요한 주소 공간, Code·Data·Stack·Heap의 구조로 되어 있는 독립된 메모리 영역
+  - <span style='color:#52B69A'>프로세스의 특징</span>
+    - Code·Data·Stack·Heap의 구조로 되어 있는 독립된 메모리 영역을 할당받는다
+    - 각 프로세스는 별도의 주소 공간, 독자적인 메모리 공간을 갖기에 서로 메모리를 공유할 수 없다
+      > 즉, 다른 프로세스의 변수나 자료구조에 접근할 수 없다  
+      > 다른 프로세스의 자원에 접근하려면 프로세스 간의 통신([IPC](https://ko.wikipedia.org/wiki/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4_%EA%B0%84_%ED%86%B5%EC%8B%A0))를 사용해야한다
+
+  <img src='https://user-images.githubusercontent.com/89354370/153803550-8baddae9-9eb9-4ade-83a3-9710120c2e54.png' alt='P&T' width=300px height=200px />
+  *프로세스를 공장에 비유하면 스레드는 작업 인부로 비유할 수 있다*
+
+
+#### **운영체제** 
+
+- 운영체제란?  
+: 하드웨어와 소프트웨어, 사용자를 매개해주는 프로그램<br> 프로그램들이 유용하게 작업을 할 수 있는 환경을 제공해준다<br>
+<span style='color:gray'>*즉, 운영체제는 응용 프로그램이 하드웨어에게 일을 시킬 수 있도록 도와준다*</span>
+
+- 운영체제의 기능
+  - 시스템 자원 관리  
+    : 프로세스 관리, 메모리 관리, I/O(입출력) 관리
+  - 응용 프로그램 관리  
+    : 응용 프로그램이 실행되고, 시스템 자원을 사용할 수 있도록 *권한과 사용자를 관리*  
+      >  모든 응용 프로그램이 시스템의 자원을 마음대로 사용하게 되면, 해커에 의한 공격에 무방비해진다
+
+
 <img src='https://user-images.githubusercontent.com/89354370/153741827-3f41c721-9858-4907-a67e-3ffb93b3f5bb.png' alt='운영체제구조' height=500px width=400px />
+*하드웨어부터 시작해서 각각의 층을 올라가며 명령이 전달된다고 볼 수 있다*
+
+#### *쓰레드(Thread)*  
+
+- 쓰레드란?  
+: 프로세스가 할당 받은 자원을 이용하는 실행 단위이자, 프로세스의 특정한 수행 경로이자 프로세스 내에서 실행되는 여러 흐름의 단위<br>
+  <span style='color:gray'>하나의 쓰레드는 코드가 실행되는 하나의 흐름</span>
+
+  - 싱글 쓰레드(Single Thread)  
+  : 하나의 프로세스에 하나의 쓰레드로 작업을 직렬 처리하는 방식
+  - 멀티 쓰레드(Multi Thread)  
+  : 하나의 프로세스에 여러 개의 쓰레드로 작업을 병렬 처리하는 방식
+
+  <img src='https://user-images.githubusercontent.com/89354370/153806184-4bdcf9fc-6c69-4058-97c0-227f15d8040a.png' alt='thread' width=500px height=400px />
+  *이미지 출처: https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=bycho211&logNo=220994380643*
+
+  *JavaScript는 Event Loop 기반의 Single Thread 및 Worker Pool 형태의 Mulit Thread로 사용할 수 있다한다<br>이에 대해서도 나중에 기록해두자*
 
 
 <!-- - 프로그램(정적) -> 실행시키는 순간 -> 프로세스(동적) 
