--- a/_posts/2022-02-11-02-11-TIL.md
+++ b/_posts/2022-02-11-02-11-TIL.md
@@ -57,14 +57,21 @@ render_with_liquid: false
 
 - 쓰레드란?  
 : 프로세스가 할당 받은 자원을 이용하는 실행 단위이자, 프로세스의 특정한 수행 경로이자 프로세스 내에서 실행되는 여러 흐름의 단위<br>
-  <span style='color:gray'>하나의 쓰레드는 코드가 실행되는 하나의 흐름</span>
+  <span style='color:gray'>하나의 쓰레드는 코드가 실행되는 하나의 흐름</span>  
+
+  <img src='https://user-images.githubusercontent.com/89354370/153807847-00461455-0790-445f-91ef-249d8d2cc47a.png' alt='Thread' width=500px height=400px />
 
   - 싱글 쓰레드(Single Thread)  
   : 하나의 프로세스에 하나의 쓰레드로 작업을 직렬 처리하는 방식
   - 멀티 쓰레드(Multi Thread)  
   : 하나의 프로세스에 여러 개의 쓰레드로 작업을 병렬 처리하는 방식
+  - <span style='color:#52B69A'>쓰레드의 특징</span>
+    - **각 쓰레드는 독자적인 스택(Stack) 메모리를 갖는다**  
+      > 스택만 할당받고 Code, Data, Heap 영역은 공유한다<br>
+      > 각 쓰레드는 별도의 레지스터와 스택을 갖지만, 힙 메모리는 서로 읽고 쓸 수 있다
+    - 쓰레드는 메모리를 공유하기 때문에 동기화, 데드락 등의 문제가 발생할 수 있다
 
-  <img src='https://user-images.githubusercontent.com/89354370/153806184-4bdcf9fc-6c69-4058-97c0-227f15d8040a.png' alt='thread' width=500px height=400px />
+  <img src='https://user-images.githubusercontent.com/89354370/153806184-4bdcf9fc-6c69-4058-97c0-227f15d8040a.png' alt='SvsM' width=500px height=400px />
   *이미지 출처: https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=bycho211&logNo=220994380643*
 
   *JavaScript는 Event Loop 기반의 Single Thread 및 Worker Pool 형태의 Mulit Thread로 사용할 수 있다한다<br>이에 대해서도 나중에 기록해두자*
