포스트 추가

--- a/_posts/2022-02-18-02-18-TIL-Docker.md
+++ b/_posts/2022-02-18-02-18-TIL-Docker.md
@@ -63,3 +63,11 @@ render_with_liquid: false
   <span style='color:gray'>*이 외에도 오케스트레이션, 로드밸런싱 기능을 통해 테스트 환경 및 수평적 확장에도 도움이 된다고 하지만 이 부분은 좀 더 내용을 학습하고 다듬어 포스팅해야겠다. 내일은 실습을 통해 배웠던 Docker CLI에 대해 기술해 볼 예정이다*</span>
   
 <!-- 내일 작성할 TIL Docker CLI 명령어 정리 -->
+
+<!-- 
+호스트 PC - Physical machine (물리적 컴퓨터)
+게스트 PC - virtual machine (논리적 컴퓨터)
+가상화 시스템(Hypervisor) - vmware, virtualbox, parallels
+
+=> VM이란 호스트 PC 위에서 Hypervisor를 통해 게스트 PC를 올려 쓸 수 있다 
+ -->
