--- a/_posts/2022-01-29-순열-조합.md
+++ b/_posts/2022-01-29-순열-조합.md
@@ -4,7 +4,7 @@ author:
   name: SsankQ
 date: 2022-01-29 12:30:00 +0800
 categories: [Algorithms & CodingTest, Algorithms]
-tags: []
+tags: [Permutation, Combination]
 render_with_liquid: false
 ---
 
