--- a/_posts/2022-03-02-03-02-EIF-ES6-import.md
+++ b/_posts/2022-03-02-03-02-EIF-ES6-import.md
@@ -3,14 +3,15 @@ title: ES6 import 형식으로 디렉토리를 불러올 때 발생하는 오류
 author:
   name: SsankQ
 date: 2022-03-02 16:30:00 +0800
-categories: [EIF, Back-End]
-tags: [Back-End, EIF]
+categories: [EIF, First-Project]
+tags: [First-Project, EIF]
 render_with_liquid: false
 ---
 
 ### EIF
 
-#### 어떤 에러인가요?
+#### 어떤 에러인가?
+
 - CommonJS 형식이 아닌 ES6 import 형식으로 Directory를 불러올 때 정상적으로 불러오지 못하며 에러가 발생
 
 #### 에러 메시지
