카테고리 재분류

--- a/_posts/2022-04-13-04-13-CS-EventLoop.md
+++ b/_posts/2022-04-13-04-13-CS-EventLoop.md
@@ -3,7 +3,7 @@ title: JavaScript EventLoop
 author:
   name: SsankQ
 date: 2022-04-13 16:30:00 +0900
-categories: [CS, JS]
+categories: [JavaScript]
 tags: [CS, JavaScript]
 render_with_liquid: false
 ---
