--- a/_posts/2022-04-15-04-15-CS-Cache.md
+++ b/_posts/2022-04-15-04-15-CS-Cache.md
@@ -3,7 +3,7 @@ title: 캐시
 author:
   name: SsankQ
 date: 2022-04-15 17:30:00 +0900
-categories: [CS]
-tags: [CS, JavaScript]
+categories: [Computer Science]
+tags: [CS]
 render_with_liquid: false
 ---
