--- a/_posts/2022-05-12-05-12-CS-OOP.md
+++ b/_posts/2022-05-12-05-12-CS-OOP.md
@@ -3,7 +3,7 @@ title: 객체지향 프로그래밍
 author:
   name: SsankQ
 date: 2022-05-12 14:30:00 +0900
-categories: [CS, JavaScript]
+categories: [Computer Science]
 tags: [CS]
 render_with_liquid: false
 ---
