포스트 추가

--- a/_posts/TIL/2022-05-31-05-31-TIL-사전과제회고.md
+++ b/_posts/TIL/2022-05-31-05-31-TIL-사전과제회고.md
@@ -18,7 +18,7 @@ render_with_liquid: false
 
 ### 사전 과제 인터뷰 후 Review
 
-- MVC 패턴을 통해 폴더 구성을 했는데, Controller 부분에서 직접 파일을 작성하는 것이 아니라 한단계 더 폴더를 세분화해서 작성해줄 것  
+- MVC 패턴을 통해 폴더 구성을 했는데, Controller 부분에서 직접 파일을 작성하는 것이 아니라 한단계 더 폴더를 세분화해서 작성해줄 것
 - 사용자 인증을 위해 JWT를 사용했지만, JWT만 사용하는 것은 보안에 좋지 않으므로 `Cookie` `Session`을 활용할 것
 - 에러 통합 핸들링하는 것도 중요하다
 
@@ -26,8 +26,10 @@ render_with_liquid: false
 
 ### 느낀점
 
-***서버의 유저는 API를 사용하는 클라이언트***  
+**_서버의 유저는 API를 사용하는 클라이언트_**  
 : 서버의 부하를 줄이기 위해 노력하는 것은 좋으나 **서버의 유저를 Serving 하는 것**에 초점을 두자
 
+**_실제 트래픽이 있다는 가정하에 작성하자_**  
+: 사실, 트래픽이 없다는 전제로 보안 프로토콜을 사용하지 않고 코드를 작성했기 때문에, 이러한 점들을 지적받았다. 항상 실제 서비스를 구현한다 생각하고 개발하자
 
-******
+_이번 사전 과제를 통해 서버의 존재 의의부터 개발할 때, 어떤 점들을 신경써야하는지 배울 수 있었다. 능숙한 개발자가 되기위해 끊임없이 클라이언트의 입장에서 고민할 수 있도록 노력해야겠다_
