포스트 추가

--- a/_posts/CS/2022-06-07-06-07-CS-동기vs비동기.md
+++ b/_posts/CS/2022-06-07-06-07-CS-동기vs비동기.md
@@ -8,8 +8,41 @@ tags: [CS]
 render_with_liquid: false
 ---
 
+> [참조 블로그](https://velog.io/@wonhee010/%EB%8F%99%EA%B8%B0vs%EB%B9%84%EB%8F%99%EA%B8%B0-feat.-blocking-vs-non-blocking)
+
 ### 동기 vs 비동기
+
+![image](https://user-images.githubusercontent.com/89354370/173182354-4086ddaa-a33a-4105-929e-2bcdb2a23994.png)
+
+호출되는 함수의 작업 완료 여부를 신경쓰는지 여부에 따라 나뉘는 개념
 
 #### 동기 (Synchronous)
 
+- 현재 진행 중인 태스크의 응답이 끝남과 동시에 다음 작업 요청
+- 함수를 호출한 곳에서 **호출되는 함수의 결과가 반환되는 것을 기다린다**
+- 작업 완료 여부를 계속해서 체크
+
 #### 비동기 (Asynchronous)
+
+- 현재 태스크의 응답이 끝나지 않더라도 다음 작업 요청, 진행
+- 함수를 호출한 곳에서 **결과를 기다리지 않고**, 다른 함수(callback)에서 결과를 처리한다
+- 작업 완료 여부를 체크하지 않음
+
+---
+
+### Blocking vs Non-Blocking
+
+함수 호출에 대한 **제어권** 처리 방식의 차이
+
+> 제어권  
+> : 함수(태스크)의 코드를 실행할 수 있는 권리
+
+#### Blocking
+
+![image](https://user-images.githubusercontent.com/89354370/173182750-0b2e678c-61ee-459a-93bf-01abc4d03d5d.png)
+_Blocking은 A함수가 B함수를 호출하면, 제어권 A -> B_
+
+#### Non-Blocking
+
+![image](https://user-images.githubusercontent.com/89354370/173182820-50261373-5123-4252-98b5-3259b7a30af5.png)
+_Non-Blocking은 A함수가 B함수를 호출해도 제어권을 그대로 유지_
