--- a/_posts/CS/2022-06-16-06-16-CS-트랜잭션.md
+++ b/_posts/CS/2022-06-16-06-16-CS-트랜잭션.md
@@ -1,10 +1,10 @@
 ---
-title: 프레임워크 vs 라이브러리
+title: 트랜잭션(Transaction)
 author:
   name: SsankQ
 date: 2022-06-13 15:30:00 +0900
 categories: [Computer Science]
-tags: [CS]
+tags: [CS, DB]
 render_with_liquid: false
 ---
 
