포스트 추가

--- a/_posts/CS/2022-06-16-06-16-CS-트랜잭션.md
+++ b/_posts/CS/2022-06-16-06-16-CS-트랜잭션.md
@@ -10,18 +10,40 @@ render_with_liquid: false
 
 ### 트랜잭션
 
-#### 트랜잭션(Transaction)이란?
+#### **트랜잭션(Transaction)이란?**
 
-여러 개의 작업을 하나로 묶은 실행 유닛
+- **데이터베이스의 상태를 변화시키기 위해 수행하는 작업의 단위**
+- 하나로 묶인 작업들은 모두 실행되거나, 실행되지 않는다 (All-or-Nothing)
 
-#### 트랜잭션의 특징
+---
 
-ACID
+#### **트랜잭션의 특징**
+
+- `SQL`은 **ACID** 특성을 따른다
 
 ##### 원자성 (Atomicity)
 
+> 트랜잭션의 작업이 부분적으로 실행되거나 중단되지 않는 것을 보장  
+> => 불가능한 최소의 단위인 **하나의 원자처럼 동작**
+
 ##### 일관성 (Consistency)
+
+> 미리 정의된 규칙(제약)에서만 수정이 가능한 특성  
+> **데이터베이스의 상태는 이전과 같이 유효**해야한다
 
 ##### 독립성 (Isoloation)
 
+> 모든 트랜잭션은 다른 트랜잭션으로부터 **독립되어야 하는 특성**  
+> 트랜잭션 수행 시 다른 트랜잭션의 작업이 끼어들지 못하도록 보장
+
 ##### 지속성 (Durability)
+
+> **성공적으로 수행된 트랜잭션은 영원히 반영되어하는 특성**  
+> 기록이 영구적으로 남아있어야 한다
+
+---
+
+<br>
+
+_"SQL에서는 **ACID** 특성을 통해 트랜잭션이 안전하게 수행된다는 것을 보장해야한다.  
+다만 NoSQL에서는 **ACID** 특성과는 달리 **CAP** 이론을 다룬다고 한다. 어떠한 것인지 알아봐야겠다"_
