--- a/_posts/CS/2022-06-17-06-17-CS-CAP이론.md
+++ b/_posts/CS/2022-06-17-06-17-CS-CAP이론.md
@@ -37,7 +37,7 @@ render_with_liquid: false
 
 #### CAP의 단점
 
-"CA | AP | CP 와 같이 두 가지의 특성만 만족할 수 있기 때문에, 각 케이스에 따라 빠져있는 특성에 대한 허점이 발생한다"
+_"CA, AP, CP와 같이 두 가지의 특성만 만족하기 때문에, 각 케이스에 따라 빠져있는 특성에 대한 허점이 생긴다"_
 
 ---
 
