줄바꿈 수정

--- a/_posts/CS/2022-06-17-06-17-CS-CAP이론.md
+++ b/_posts/CS/2022-06-17-06-17-CS-CAP이론.md
@@ -14,7 +14,7 @@ render_with_liquid: false
 
 - 관계형 데이터 모델을 지양하는 NoSQL에서 의미있는 이론이다
 - 세가지 속성을 뜻하며 각각 일관성, 가용성, 분단 허용성을 뜻한다
-- 분산 시스템에서는 위 3가지 속성을 모두 충족하는 것은 불가능하며, 오직 **2가지만 만족**할 수 있다 _(CA | AP | CP)_
+- 분산 시스템에서는 위 3가지 속성을 모두 충족하는 것은 불가능하며, 오직 **2가지만 만족**할 수 있다 <br> _(CA / AP / CP)_
 
 ---
 
